cmake_minimum_required(VERSION 3.23)
project(simplec)

set(CMAKE_CXX_STANDARD 11)

add_executable(Test1 Test1.cpp)
add_executable(TestCharArray TestCharArray.cpp)
add_executable(TestLambda TestLambda.cpp)
add_executable(TestLambda2 TestLambda2.cpp)
add_executable(TestTableView TestTableView.cpp)
add_executable(TestObjectMemManager TestObjectMemManager.cpp)
add_executable(TestReferAndPtr TestReferAndPtr.cpp)
